force-app/main/default/objects/Work_Management__c/Work_Management__c.object-meta.xml
<CustomObject>
    <label>Work Management</label>
    <nameField>
        <label>Work Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>