force-app/main/default/objects/Work_Management__c/fields/Actual_Completion_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_DateTime__c</fullName>
    <label>实际完成时间</label>
    <type>DateTime</type>
</CustomField>