force-app/main/default/objects/Work_Management__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <label>实际工时</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>