force-app/main/default/objects/Work_Management__c/fields/Attachment_Count__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Count__c</fullName>
    <label>附件数量</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>