force-app/main/default/objects/Work_Management__c/fields/Collaborators__c.field-meta.xml
<CustomField>
    <fullName>Collaborators__c</fullName>
    <label>协作人员</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>