force-app/main/default/objects/Work_Management__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>完成日期</label>
    <type>Date</type>
</CustomField>