force-app/main/default/objects/Work_Management__c/fields/Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percentage__c</fullName>
    <label>完成百分比</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>