force-app/main/default/objects/Work_Management__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <label>预计工时</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>