force-app/main/default/objects/Work_Management__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Managements</relationshipLabel>
    <relationshipName>Work_Management_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>