force-app/main/default/objects/Work_Management__c/fields/Parent_Work__c.field-meta.xml
<CustomField>
    <fullName>Parent_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>关联工作</label>
    <referenceTo>Work_Management__c</referenceTo>
    <relationshipLabel>关联子工作</relationshipLabel>
    <relationshipName>Parent_Work_Work_Management</relationshipName>
    <type>Lookup</type>
</CustomField>