force-app/main/default/objects/Work_Management__c/fields/Planned_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Planned_End_DateTime__c</fullName>
    <label>计划结束时间</label>
    <type>DateTime</type>
</CustomField>