force-app/main/default/objects/Work_Management__c/fields/Planned_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_DateTime__c</fullName>
    <label>计划开始时间</label>
    <type>DateTime</type>
</CustomField>