force-app/main/default/objects/Work_Management__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>关联业务对象</label>
    <length>18</length>
    <type>Text</type>
</CustomField>