force-app/main/default/objects/Work_Management__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>备注</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>