force-app/main/default/objects/Work_Management__c/fields/Responsible_User__c.field-meta.xml
<CustomField>
    <fullName>Responsible_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>负责人</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>负责人工作管理</relationshipLabel>
    <relationshipName>Responsible_User_Work_Management</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>