force-app/main/default/objects/Work_Management__c/fields/Work_Category__c.field-meta.xml
<CustomField>
    <fullName>Work_Category__c</fullName>
    <label>工作分类</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>业务</fullName>
            </value>
            <value>
                <fullName>技术</fullName>
            </value>
            <value>
                <fullName>管理</fullName>
            </value>
            <value>
                <fullName>运营</fullName>
            </value>
            <value>
                <fullName>支持</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>