force-app/main/default/objects/Work_Management__c/fields/Work_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Number__c</fullName>
    <displayFormat>WM-{000000}</displayFormat>
    <label>工作编号</label>
    <startingNumber>1</startingNumber>
    <type>AutoNumber</type>
</CustomField>