force-app/main/default/objects/Work_Management__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>工作类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>项目任务</fullName>
            </value>
            <value>
                <fullName>日常工作</fullName>
            </value>
            <value>
                <fullName>问题处理</fullName>
            </value>
            <value>
                <fullName>需求开发</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>